# sctt

./: .gitignore  Display.hs  Eq.hs  Eval.hs  Examples.hs  Fresh.hs  Ident.hs  Main.hs  Micro.cf  Nano.cf  Options.hs  Outline-Draft.md  RM.hs  Radanne-Internship.md  Resolve.hs  ResolveMicro.hs  Setup.hs  TCM.hs  Talk.org  Terms.hs  TypeCheck.hs  core.org  nanoAgda.cabal
Micro/: Frontend.hs  Resolve.hs
Nano/: Frontend.hs
examples/: 000-Universe.ma  000-Universe.na  010-Eq.ma  010-Lam.ma  010-Lam.na  020-Finite.ma  030-Ulf.ma  031-TripleF.ma  032-Nisse.ma  033-IfSwap.ma  040-Integers.ma  ConstSharing.ma  EtaEq.ma  EtaEq2.ma  SubTyping.na  datatype.ma  datatype.na  nat.ma
report-radanne/: Common.hs  Makefile  Nisse.agda  Report.hs  TripleF.agda  Ulf.agda  commands.tex  lst.tex  report.tex
report-radanne/poster/: ChalmersU_black.eps  Lam.agda  beamerthemeI6pd2.sty  case.agda  code.agda  poster.tex  poster.toc
report-radanne/slides/: seq.ml  slides.tex
src/: Check.hs  Display.hs  Eq.hs  Eval.hs  FeInterface.hs  Heap.hs  Ident.hs  Main.hs  Micro.cf  Setup.hs  TCM.hs  Terms.hs  TermsInstances.hs  TexnAgda.hs  TypeCheck.hs  Value.hs  nanoAgda.cabal
src-Andreas/: Check.hs
src/Micro/: Resolve.hs
src/Nano/: Frontend.hs  Resolve.hs
